--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_item_list_view">ItemListView</string>
+    <string name="title_activity_map_business">Map</string>
 
 </resources>
