--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_item_list_view">ItemListView</string>
+    <string name="title_activity_item_list_view">RezaDiscount</string>
     <string name="title_activity_map_business">Map</string>
+    <string name="title_activity_drawer">Drawer</string>
 
 </resources>
