--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RezaDiscount</string>
+    <string name="app_name">Nebulis</string>
     <string name="title_activity_location_business">Map</string>
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
@@ -11,8 +11,20 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_item_list_view">RezaDiscount</string>
+    <string name="title_activity_item_list_view">Nebulis</string>
     <string name="title_activity_map_business">Map</string>
     <string name="title_activity_drawer">Drawer</string>
+
+
+
+    <string name="connexion_button">Connection</string>
+    <string name="subscribe_button">Subscribe</string>
+    <string name="or_subscribe_with">Or subscribe with :</string>
+    <string name="search_button">Search</string>
+    <string name="activate_gps">The application needs GPS activation to detect nearby shops. Activate ?</string>
+    <string name="yes">Yes</string>
+    <string name="error">There was an error :</string>
+
+
 
 </resources>
