#10 #4 #3 navigation drawer, token system

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,4 +24,6 @@
     <string name="yes">Oui</string>
     <string name="error">Une erreur s\'est produite :</string>
 
+    <string name="url_api">http://api.booking.touratier.fr/app_dev.php/</string>
+
 </resources>
