--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="yes">Yes</string>
     <string name="error">There was an error :</string>
 
+    <string name="url_api_dev">http://api.booking.touratier.fr/</string>
+
     <string name="url_api">http://api.booking.touratier.fr/app_dev.php/</string>
 
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
@@ -35,6 +37,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="book">Book</string>
 
 
 </resources>
