#20 #19 subscribe and login facebook prototype functionnal need rework

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -32,4 +32,11 @@
         running the sample again.</string>
     <string name="book">Réserver</string>
 
+    <string name="lastname">Nom</string>
+    <string name="firstname">Prenom</string>
+    <string name="email">Email</string>
+    <string name="password">Mot de passe</string>
+    <string name="birthday">Date de naissance</string>
+    <string name="gender">Sexe</string>
+
 </resources>
