--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,14 @@
     <string name="book">Book</string>
     <string name="facebook_app_id">1518479935118372</string>
 
+
+
+    <string name="lastname">Last name</string>
+    <string name="firstname">First name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="birthday">Birthday</string>
+    <string name="gender">Gender</string>
+
+
 </resources>
