#20 Improving subscription interface a bit

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,5 +38,7 @@
     <string name="password">Mot de passe</string>
     <string name="birthday">Date de naissance</string>
     <string name="gender">Sexe</string>
+    <string name="male">Homme</string>
+    <string name="female">Femme</string>
 
 </resources>
