--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Nebulis</string>
+    <string name="app_name">Proximity</string>
     <string name="title_activity_location_business">Map</string>
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
@@ -11,9 +11,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_item_list_view">Nebulis</string>
     <string name="title_activity_map_business">Map</string>
     <string name="title_activity_drawer">Drawer</string>
+    <string name="title_activity_item_list_view">Businesses</string>
 
 
     <string name="connexion_button">Connection</string>
@@ -32,11 +32,8 @@
         running the sample again.</string>
 
 <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="book">Book</string>
-    <string name="facebook_app_id">1518479935118372</string>
-
-
+    <string name="facebook_app_id" translatable="false">1518479935118372</string>
 
     <string name="lastname">Last name</string>
     <string name="firstname">First name</string>
@@ -47,14 +44,11 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
 
-
-
     <string name="profile">Profile</string>
     <string name="shops">Favorite shops</string>
     <string name="agenda">Agenda</string>
     <string name="find">Find...</string>
     <string name="deal">Deal</string>
     <string name="settings">Settings</string>
-
 
 </resources>
