Subscription task left : - 2nd password - Error messages - After sub go the right activity - Date coming from Facebook

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,7 @@
     <string name="find">Find...</string>
     <string name="deal">Deal</string>
     <string name="settings">Settings</string>
+    <string name="discount">Discount</string>
+
 
 </resources>
