Subscription : - Double password system - Refactoring date function - Date with facebook OK - Gender from facebook OK

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -53,5 +53,8 @@
     <string name="custom_deal">Offre personalisee</string>
     <string name="closest_deal">Offre proche</string>
     <string name="best_deal">Meilleures offres</string>
+    <string name="password_repeat">Répéter mot de passe</string>
+    <string name="password_problem_match">Les mots de passe ne correspondent pas</string>
+    <string name="password_problem_empty">Le mot de passe ne peut pas être vide</string>
 
 </resources>
