--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="book">Book</string>
-    <string name="facebook_app_id" translatable="false">1518479935118372</string>
+    <string name="facebook_app_id">1518479935118372</string>
 
     <string name="lastname">Last name</string>
     <string name="firstname">First name</string>
