--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,4 +61,8 @@
     <string name="logout">Déconnexion</string>
     <string name="password_forgotten">Mot de passe oublié ?</string>
     <string name="reset_password">Réinitialiser le mot de passe</string>
+    <string name="last_name_empty">Veuillez remplir le champ nom de famille</string>
+    <string name="first_name_empty">Veuillez remplir le champ prénom</string>
+    <string name="email_empty">Veuillez remplir le champ email</string>
+    <string name="birthday_empty">Veuillez remplir le champ anniversaire</string>
 </resources>
