--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="first_name_empty">Please fill first name field</string>
     <string name="email_empty">Please fill email field</string>
     <string name="birthday_empty">Please fill birthday field</string>
+    <string name="password_email_success">Password recover has been sent to your email adress</string>
 
 
 </resources>
