- Dialog success on password recovery - Small string and comments fixes - Test on emptiness for connexion and password fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,6 @@
     <string name="best_deal">Best deal</string>
     <string name="title_activity_find">FindActivity</string>
     <string name="password_repeat">Repeat password</string>
-    <string name="password_problem_match">Passwords won\'t match</string>
     <string name="password_problem_empty">Password can\'t be empty</string>
     <string name="facebook_error">There was a Facebook error. Please try again later</string>
     <string name="connexion_problem">Connection problem. Your login/password doesn\'t match</string>
@@ -80,6 +79,7 @@
     <string name="email_incorrect">Email is incorrect</string>
     <string name="waiting">Wait a minute :)</string>
     <string name="title_activity_agenda">AgendaActivity</string>
+    <string name="ok">Ok</string>
 
 
 </resources>
