--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Proximity</string>
+    <string name="app_name">Grenadeal</string>
     <string name="title_activity_location_business">Carte</string>
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
