--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,4 +68,18 @@
     <string name="password_email_success">La récupération de votre passe vous à été envoyé par email</string>
     <string name="email_incorrect">L\'email n\'est pas valide</string>
     <string name="waiting">Attendez un instant :)</string>
+
+
+    <!--Sign in error-->
+    <string name="auth_1">Une erreur Facebook s\'est produite, veuillez réessayer plus tard</string>
+    <string name="auth_2">Une erreur interne s\'est produite, veuillez réessayer plus tard</string>
+    <string name="auth_3">Une erreur Facebook s\'est produite, veuillez réessayer plus tard</string>
+    <string name="auth_4">La combinaison identifiant/mot de passe n\'est pas valide</string>
+
+    <!--Sign up errors-->
+    <string name="reg_1">Il existe déjà un utilisateur associé à cet email</string>
+    <string name="reg_2">Le mot de passe ne peut pas être vide</string>
+    <string name="reg_3">La date de naissance renseignée n\'est pas valide</string>
+    <string name="reg_4">Le mot de passe doit contenir au minimum 8 caractères</string>
+
 </resources>
